--- a/lab1/style.css
+++ b/lab1/style.css
@@ -9,97 +9,70 @@ body{
     -webkit-background-size: cover;
     background-size: cover;
 }
-
-.header{
+.wrapper {
     display: grid;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: 20% 80%;
-    row-gap: 0;
-    column-gap: 0;
-    /* justify-content: space-between; */
-    
-    font-family: 'Open Sans', sans-serif;
+    grid-template-columns: repeat(2, 2fr);
+    grid-auto-rows: repeat(auto, auto);
+    grid-template-areas:
+      "hd nav-bar"
+      "sd main";
+    grid-column-gap: 8%;
+    grid-row-gap: 15%;
 }
-
-.header-line{
-    grid-column:1/3;
-    grid-row: 1;
-    padding-top: 3%;
-    display: flex; 
-    justify-content: space-between;
-    justify-items: stretch;
+.header-logo {
+    grid-area: hd;
 }
-
-.header-logo{
-    grid-column: 1;
-    grid-row: 1;
+.logo {
+    max-width: 100%; 
+    height: auto; 
 }
-
-.nav{
+.nav-bar {
+    grid-area: nav-bar;
     display: flex;
-    grid-column: 3;
-    grid-row: 1;
+    justify-content: center;
+    align-items: center;
 }
-
 .nav-item{
+    
     color: #fff;
     text-decoration: none;
     font-weight: 700;
     font-size: 20px;
-    margin-right: 50px;
-    margin-left: 20px;
+    margin-right: 5%;
+    margin-left: 5%;
     transition: color 0.3s linear;
+    
 }
 
 .nav-item:hover{
     color: #7B68EE;
 }
+.sidebar {
+    grid-area: sd;
+    
 
-.main{
-    display: flex;
-    grid-column: 1/3;
-    grid-row: 2;
-    justify-content: space-between;
-    margin-top: 25px;
 }
-
-.hero-image{
-    grid-column: 1/span 2;
-    grid-row: 2;
-    margin-top: 30px;
-}
-
 .hero-img{
-    width: 170%;
-    height: 70%;
-    
+    width: 100%;
+    height: 90%;
 }
-
-.header-down{
-    grid-column: 2/3;
-    grid-row: 2;
-    
+.content {
+    grid-area: main;
 }
-
-.header-title{
+.header-title {
     color: #fff;
     font-family: 'Open Sans', sans-serif;
-    font-size: 50px;
+    font-size: 200%;
     font-weight: 700;
-    text-align: justify;
-    margin-top: 200px; 
-    margin-bottom: 10px;
-    margin-right: 100px;
-    margin-left: -100px;
-    
+    text-align: center; /* Center text horizontally */
+    margin-top: 20%;
+    margin-right: 10%;
 }
 
-.header-subtitle{
-    
+.header-subtitle {
     color: #808080;
     font-size: 18px;
     text-align: center;
     font-family: 'Open Sans', sans-serif;
 }
-
 
